_sass/_layout.scss
// Body and main layout
html {
    background: white;
}

body {
    position: relative;

    &.error {
        main {
            height: 100vh;
            justify-content: center;   
        }
    }
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    gap: 4rem;
    position: relative;
    background: linear-gradient(45deg, var(--primary-color), white);

    &:before,
    &:after {
        content: "";
        display: block;
        width: 60vw;
        height: 60vw;
        border-radius: 999px;
        background: var(--secondary-color);
        position: absolute;
        top: 0;
        left: -25%;
        z-index: 1;
        filter: blur(100px);
    }

    &:after {
        top: auto;
        bottom: 0;
        left: auto;
        right: -25%;
        background: var(--tertiary-color);
    }
}

article {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: var(--container-width);
    gap: 1rem;
    z-index: 2;
    padding: 1.5rem;
    opacity: 0;
    will-change: transform, opacity;
    animation: fade-up 0.5s ease-out forwards;

    &:nth-child(2) {
        background: rgba(255, 255, 255, 0.4);
        border-top-left-radius: 1.5rem;
        border-top-right-radius: 1.5rem;
        box-shadow: 0 0 20rem var(--secondary-color);
    }

    p { 
        img {
            width: 1.5rem;
            height: 1.5rem;
            border-radius: 0.5rem;
            display: inline-block;
            vertical-align: text-bottom;
            margin: 0 0.25rem;
            box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);

            &.avatar {
                border-radius: 999px;
            }
        }
    }
}

table {
    width: 100%;
    border-collapse: collapse;
    
    td {
        padding: 1.5rem 0;
        border-bottom: 1px solid white;
        vertical-align: top;
    }
    
    td:first-child {
        width: 8rem;
        font-weight: 800;
        font-size: 0.8rem;
    }
}

hr {
    border: 0;
    clear: both;
    display: block;
    text-align: center;
    width: 100%;
    background: rgba(255, 255, 255, 0.4);
    height: 1px;
    overflow: hidden;
    position: relative;
    border-radius: 999px;

    &:before {
        animation-duration: 2s;
        animation-timing-function: ease-in-out;
        animation-iteration-count: infinite;
        animation-name: progress;
        background: var(--secondary-color);
        content: "";
        display: block;
        height: 1px;
        position: absolute;
        width: 20%;
        border-radius: 999px;
      }
}
  

